--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.11.0",
     "@segment/analytics-next": "^1.81.1",
+    "@sentry/nextjs": "^10.39.0",
     "@stripe/react-stripe-js": "^5.6.0",
     "@stripe/stripe-js": "^8.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
