--- a/e2e-tests/.env.example
+++ b/e2e-tests/.env.example
@@ -1,5 +1,3 @@
-BASE_URL=https://qa.goodparty.org/
-TEST_USER_ADMIN=some-admin@goodparty.org
-TEST_USER_ADMIN_PASSWORD=password
-SLACK_BOT_TOKEN=put_token_here
+BASE_URL=https://dev.goodparty.org/
+SLACK_BOT_TOKEN=xoxb-token-here
 SERVE_ANALYZE_S3_BUCKET=serve-analyze-data-dev
