update storybook config

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lint:fix": "eslint . --quiet --fix && prettier --write .",
     "start": "next build && next start",
     "start-local": "cross-env NODE_ENV=production NEXT_PUBLIC_APP_BASE=http://localhost:4000 NEXT_PUBLIC_API_BASE=http://localhost:3000 next start -p 4000",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "vitest run",
     "test:e2e": "cd e2e-tests && npx playwright install chromium && npx playwright test tests/ --reporter=list",
     "test:visual:update": "cd e2e-tests && npx playwright install chromium && npx playwright test --project=stable --update-snapshots --reporter=list",
@@ -142,8 +144,10 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/client-sqs": "^3.968.0",
+    "@chromatic-com/storybook": "^5.0.1",
     "@playwright/test": "^1.48.1",
     "@slack/web-api": "^7.13.0",
+    "@storybook/addon-docs": "^10.2.12",
     "@storybook/nextjs-vite": "^10.2.10",
     "@stylistic/eslint-plugin": "^3.1.0",
     "@testing-library/jest-dom": "^6.9.1",
