--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ steps.pr.outputs.head_repo }}
-          ref: ${{ steps.pr.outputs.branch }}
+          ref: ${{ steps.pr.outputs.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Node.js
@@ -140,7 +140,7 @@ jobs:
             echo "No snapshot changes to commit"
           else
             git commit -m "chore: update visual snapshots from CI [skip ci]"
-            git push
+            git push origin HEAD:${{ steps.pr.outputs.branch }}
           fi
 
       - name: React with success
